Rename project name
"PingPong" was already taken by other rubygem.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>PingPong Client Sample</title>
+  <title>PingPongIO Client Sample</title>
   <script>
     var socket = new WebSocket("ws://localhost:4481");
     socket.onopen = function (event) {
